tests/rosetta/out/Rust/md5.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:40:04Z
fn main() {
    mod testpkg {
        pub fn Add(a: i32, b: i32) -> i32 { a + b }
        pub const Pi: f64 = 3.14;
        pub const Answer: i32 = 42;
    }
    for pair in vec![vec!["d41d8cd98f00b204e9800998ecf8427e", ""], vec!["0cc175b9c0f1b6a831c399e269772661", "a"], vec!["900150983cd24fb0d6963f7d28e17f72", "abc"], vec!["f96b697d7cb7938d525a2f31aaf161d0", "message digest"], vec!["c3fcd3d76192e4007dfb496cca67e13b", "abcdefghijklmnopqrstuvwxyz"], vec!["d174ab98d277d9f5a5611c2c9f419d9f", "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"], vec!["57edf4a22be3c955ac49da2e2107b67a", format!("{}{}", "12345678901234567890", "123456789012345678901234567890123456789012345678901234567890")], vec!["e38ca1d920c4b8b8d3946b2c72f01680", "The quick brown fox jumped over the lazy dog's back"]] {
        let sum = testpkg::MD5Hex(pair[1]);
        if sum != pair[0] {
            println!("MD5 fail");
            println!("{} {:?}", "  for string,", pair[1]);
            println!("{} {:?}", "  expected:  ", pair[0]);
            println!("{} {:?}", "  got:       ", sum);
        }
    }
}
